<resources>
    <string name="app_name">Tipper</string>
    <string name="title_activity_create_manual_shift">CreateManualShift</string>
    <string name="title_activity_recent_shifts">Recent Shifts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sum_of_hours">Hours</string>
    <string name="summary">Summary</string>
    <string name="salary">Salary</string>
    <string name="tips">Tips</string>
    <string name="end_shift_title">End Shift</string>
    <string name="end_shift_message">Are you sure you want to end the shift</string>
    <string name="add_manual_shift">Add Manual</string>
    <string name="drag_here_tips">Drag Here Tips</string>
    <string name="delete_shift_title">Delete Shift</string>
    <string name="delete_shift_query">Are you sure you want to delete this shift?</string>
    <string name="enter_time">Start Hour</string>
    <string name="exit_time">End Hour</string>
    <string name="date">Date</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="button_start_shift">press on "Start Shift" to start the shift</string>
    <string name="start_shift">Start Shift</string>
    <string name="today_salary">Today Salary</string>
    <string name="today_tips">Today Tips</string>
    <string name="today_summary">Today Summary</string>
    <string name="shift_saved_successfully">Shift Saved Successfully</string>
    <string name="end_shift">End Shift</string>
    <string name="vaild_input_number_notice">Please enter correct numbers</string>
    <string name="salary_per_hour">Salary per hour</string>
    <string name="save_changes">save changes</string>
    <string name="sounds">Sounds</string>
    <string name="skip">skip</string>
    <string name="first_setup">Initial setup</string>
    <string name="average">Average Salary Per Hour</string>
    <string name="per_hour">per hour</string>
    <string name="requires_hour_for_calc">Requires at least an hour to calculate</string>
    <string name="next">next</string>
    <string name="welcome_to">Welcome To </string>
    <string name="brief_explanation_app">Here is a brief explanation app</string>
    <string name="change_the_start_time">You can change the start time by pressing the clock</string>
    <string name="daily_salary">Daily Salary</string>
    <string name="watch_your_daily_salary">Here you can watch your daily salary in real time</string>
    <string name="the_screen_is_refreshed">Every time you sign an application, the screen is refreshed</string>
    <string name="watch_your_average_wage">Here you can watch your average wage</string>
    <string name="example_average">For example, if you did two hours 50₪ salary and another 70₪ tips you accumulated total of two hours they 120₪, 60₪ average</string>
    <string name="Total_salary">Total Salary</string>
    <string name="watch_your_total_salary">Here you can watch your total salary including tips you have earned</string>
    <string name="watch_how_much_tips">Here you can watch how much tips you have earned</string>
    <string name="Simply_drag_here_Tips">Simply drag here Tips</string>
    <string name="total">Total</string>
    <string name="average_salary">Average salary</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="years">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>

</resources>
