
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="50dp"
        android:background="#2979FF"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="vertical"
            android:textDirection="rtl">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="20sp"
                        android:gravity="center"
                        android:id="@+id/txtSalaryPerHour"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/login_edit_text_style"
                        android:inputType="numberDecimal"
                        android:textColor="#000" />
                    <TextView
                        android:text="₪"
                        android:gravity="bottom"
                        android:textSize="20sp"
                        android:layout_width="15dp"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:text="@string/salary_per_hour"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Switch
                    android:theme="@style/SwitchTheme"
                    android:layout_marginLeft="10dp"
                    android:gravity="left"
                    android:layout_gravity="center"
                    android:id="@+id/switchSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:text="@string/sounds"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#FFC107"
        android:paddingEnd="0dp"
        android:paddingStart="0dp"
        android:text="@string/save_changes"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>

