<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2979FF"
    android:orientation="vertical"
    tools:context=".fragments.RecentShiftsFragment">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="#FFC107">

        <Spinner
            android:id="@+id/spnYear"
            android:layout_width="0dp"
            android:entries="@array/years"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spnMonth"
            android:layout_width="0dp"
            android:entries="@array/months"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/lstShifts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:dividerHeight="10dp" />

    <LinearLayout
        android:background="#FFC107"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textColor="#000000"
                android:text="@string/summary"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_height="20dp"
                android:layout_width="match_parent"
                android:id="@+id/txtTotalSummary"
                android:layout_gravity="center_vertical"
                android:textColor="#000000"
                android:textStyle="bold"
                android:maxLines="1"
                android:textSize="17sp"
                android:gravity="center" />
        </LinearLayout>
        <TextView
            android:background="#000"
            android:layout_width="2dp"
            android:layout_height="match_parent" />
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textColor="#000000"
                android:text="@string/salary"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/txtTotalSalary"
                android:layout_gravity="center_vertical"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="17sp"
                android:maxLines="1"
                android:gravity="center"
                android:layout_height="20dp"
                android:layout_width="match_parent" />
        </LinearLayout>

        <TextView
            android:background="#000"
            android:layout_width="2dp"
            android:layout_height="match_parent" />
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textColor="#000000"
                android:text="@string/tips"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/txtTotalTips"
                android:layout_gravity="center_vertical"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="17sp"
                android:gravity="center"
                android:maxLines="1"
                android:layout_height="20dp"
                android:layout_width="match_parent" />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="2dp" />
    <TextView
        android:background="#FFC107"
        android:id="@+id/txtTotalAverage"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="17sp"
        android:gravity="center"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="30dp" />
</LinearLayout>
