<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55007aff"
    tools:context=".HomeActivity">
    <!--<android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>-->

    <RelativeLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="80dp">

            <TextView
                android:id="@+id/txtHiddenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/button_start_shift"
                android:textColor="#0000FF"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="invisible" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/startWorkingLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00ffffff">

                <TextView
                    android:id="@+id/lblEnterTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnStartWorking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/start_working_button_shape"
                    android:gravity="center"
                    android:textColor="#ffffff" />
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/layoutSummaryAndSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00FFFFFF"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/today_summary"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblDailySummary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="0₪"
                        android:textColor="#000"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/today_salary"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblDailySalary"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0₪"
                        android:textColor="#000"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAverageSalaryPerHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/average"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblAverageSalaryPerHour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="0₪"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layoutTarget"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_target_normal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <Button
                        android:id="@+id/btnDecrease"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="-"
                        android:textColor="#000"
                        android:textSize="30sp"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/lblDailyTips"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/drag_here_tips"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnIncrease"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="+"
                        android:textColor="#000"
                        android:textSize="30sp"
                        android:visibility="invisible" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnShekel20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:background="#00ffffff"
            android:contentDescription="shekel20"
            android:src="@drawable/sheqel20" />

        <ImageButton
            android:id="@+id/btnShekel10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="80dp"
            android:layout_marginEnd="5dp"
            android:background="#00ffffff"
            android:contentDescription="shekel10"
            android:src="@drawable/sheqel10" />

        <ImageButton
            android:id="@+id/btnShekel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="200dp"
            android:layout_marginEnd="5dp"
            android:background="#00ffffff"
            android:contentDescription="shekel2"
            android:src="@drawable/sheqel2" />

        <ImageButton
            android:id="@+id/btnShekel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="200dp"
            android:layout_marginEnd="5dp"
            android:background="#00ffffff"
            android:contentDescription="shekel1"
            android:src="@drawable/sheqel1" />

        <ImageButton
            android:id="@+id/btnShekel5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="80dp"
            android:background="#00ffffff"
            android:contentDescription="shekel5"
            android:src="@drawable/sheqel5" />
    </RelativeLayout>
</RelativeLayout>